# FaceDetection

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  settings.py
app/adapters/: __init__.py  facecloud.py  uploader.py
app/db/: __init__.py  engine.py  tables.py
app/models/: __init__.py  models.py
app/repository/: __init__.py  tasks.py
app/routing/: tasks.py
app/services/: __init__.py  tasks.py
